--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+header {
+  background-color: #D5CCFF;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: white;
+}
+  
+nav {
+  float: left;
+  width: 30%;
+  background: #504D60;
+  padding: 20px;
+}
+  </style>
+</head>
+  
 <body>
-<h1>Hello World</h1>
+  <header>
+    <h1>Hello World</h1>
+  </header>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
