--- a/index.html
+++ b/index.html
@@ -27,9 +27,16 @@ nav {
 </head>
   
 <body>
-  <header>
-    <h1>Hello World</h1>
-  </header>
+  
+<header>
+  <h1>Hello World</h1>
+</header>
+
+<nav>
+  
+</nav>
+  
 <p>I'm hosted with GitHub Pages.</p>
+  
 </body>
 </html>
