Fix main body formatting

--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@ header {
 nav {
   float: left;
   width: 30%;
+  height: 100%:
   background: #504D60;
   padding: 20px;
 }
+    
+ post {
+   padding: 20px;
+ }
   </style>
 </head>
   
@@ -35,8 +40,10 @@ nav {
 <nav>
   
 </nav>
-  
-<p>I'm hosted with GitHub Pages.</p>
+ 
+<post>
+  <p>I'm hosted with GitHub Pages.</p>
+</post>
   
 </body>
 </html>
