--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@ header {
 nav {
   float: left;
   width: 30%;
-  height: 100%;
+  height: auto;
   background: #504D60;
   padding: 20px;
 }
     
  post {
+   float: left;
    padding: 20px;
    width: 70%;
  }
