--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@ nav {
   height: auto;
   background: #504D60;
   padding: 20px;
+  color: white;
 }
     
  post {
    float: left;
    width: 70%;
+   padding: 20px;
  }
   </style>
 </head>
