Add a second page
Testing the page linking capability.

--- a/template.html
+++ b/template.html
@@ -37,7 +37,7 @@ nav {
 <body>
   
 <header>
-  <h1>Hello World</h1>
+  <h1>Website Header</h1>
 </header>
 
 <nav>
@@ -45,7 +45,7 @@ nav {
 </nav>
  
 <post>
-  <p>I'm hosted with GitHub Pages.</p>
+  <p>Main Text.</p>
 </post>
   
 </body>
