Add About Me page

--- a/index.html
+++ b/index.html
@@ -37,15 +37,17 @@ nav {
 <body>
   
 <header>
-  <h1>Hello World</h1>
+  <h1>Rosemary Barrass</h1>
+  <h2>Incoming PhD Student in Operations Research </h2>
 </header>
 
 <nav>
-  <p> <a href= "otherpage.html"> Other Page </a> </p>
+  <p> <a href= "about.html"> About Me </a> </p>
 </nav>
  
 <post>
-  <p>I'm hosted with GitHub Pages.</p>
+  <h1>Welcome!</h1>
+  <p>This is my blog for operations research and related topics.</p>
 </post>
   
 </body>
