--- a/otherpage.html
+++ b/otherpage.html
@@ -37,7 +37,8 @@ nav {
 <body>
   
 <header>
-  <h1>Website Header</h1>
+  <h1>Rosemary Barrass</h1>
+  <h2>Incoming PhD Student in Operations Research </h2>
 </header>
 
 <nav>
