--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ nav {
   
 <header>
   <h1>Rosemary Barrass</h1>
-  <h2>Incoming PhD Student in Operations Research </h2>
+  <p>Incoming PhD Student in Operations Research </p>
 </header>
 
 <nav>
