update title and about me

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@ nav {
   
 <header>
   <h1>Rosemary Barrass</h1>
-  <p>Incoming PhD Student in Operations Research </p>
+  <p>PhD Student in Operations Research</p>
 </header>
 
 <nav>
@@ -48,7 +48,7 @@ nav {
 <post>
   <h1>About Me</h1>
   <p>My name is Rosemary. 
-  I will be starting my graduate studies this fall in Operations Research.
+  I am currently pursuing my PhD in Operations Research at the Georgia Institute of Technology.
   I completed dual degrees in Mechanical Engineering and Mathematics at Washington State University Vancouver.
   During my undergraduate studies, I completed an REU on AC OPF(AC Optimal Power Flow) relaxations which spurred my interest in energy optimization.
   My goal for this blog is to share some of the basic concepts of AC OPF for those who may be interested in power systems and operations research.
