--- a/otherpage.html
+++ b/otherpage.html
@@ -38,7 +38,7 @@ nav {
   
 <header>
   <h1>Rosemary Barrass</h1>
-  <h2>Incoming PhD Student in Operations Research </h2>
+  <h2>PhD Student in Operations Research </h2>
 </header>
 
 <nav>
